k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: messaging-engine
  labels:
    app.kubernetes.io/part-of: messaging-engine
